<resources>
    <string name="app_name">MadLevel3Task1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="start">Start</string>
    <string name="previous">Previous</string>

    <string name="label_intro">Welcome to the Games Rating app!</string>
    <string name="label_instructions">Click START to start rating :)</string>
    <string name="button_summary">To summary</string>
    <string name="label_introduction2">Rate the following game from 1 to 5 stars!</string>
    <string name="lbl_placeholder">placeholder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_over">start over</string>
</resources>